# iris-wazuhindexer-module

./: Makefile  README.md  setup.cfg  setup.py
iris_wazuhindexer_module/: IrisWazuhindexerConfig.py  IrisWazuhindexerInterface.py  __init__.py
iris_wazuhindexer_module/wazuhindexer_handler/: wazuhindexer_handler.py
